--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,16 @@
         "thread": "cpp",
         "typeinfo": "cpp",
         "valarray": "cpp",
-        "variant": "cpp"
-    }
+        "variant": "cpp",
+        "bit": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "numbers": "cpp",
+        "ranges": "cpp",
+        "span": "cpp",
+        "semaphore": "cpp",
+        "stop_token": "cpp"
+    },
+    "cmake.configureOnOpen": false,
+    "C_Cpp.default.compilerPath": "C:\\msys64\\ucrt64\\bin\\gcc.exe"
 }
