--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@ output_g_chg_amp1.txt
 amplitudes_g_chg_amp.json
 amplitudes_e_chg_amp1.json
 include\permutations
-include\parms
+include\parms\*
 amplitudes\*
 dispersive\*
