--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ amplitudes_g_chg_amp.json
 amplitudes_e_chg_amp1.json
 include\permutations
 include\parms\*
+include\parms\dispersive
 amplitudes\*
 dispersive\*
