git ignore update

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,5 @@ amplitudes_g_chg_amp.json
 amplitudes_e_chg_amp1.json
 include\permutations
 include\parms\*
-include\parms\dispersive
+include/parms/
 amplitudes\*
-dispersive\*
